--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <header>
-        <h1 class="wedding-font">would you be my</h1>
+        <h1 class="wedding-font">will you be my</h1>
         <h2>Valentine, pau?</h2>
         <h3>SIGE NA O, BAHALA KA IKAW DIN</h3>
     </header>
