--- a/thankyou.html
+++ b/thankyou.html
@@ -27,21 +27,9 @@
     <header>
         
         <h2 class="thankyou">THANK YOU, I LOVE YOU</h2>
+        <span>See you on February 15! bawal ma-lateee, okay? Mwaaaa! 🤍</span>
         
     </header>
-    <!-- <nav>
-       <div class="container">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Our Story</a></li>
-            <li><a href="#">Things To Do</a></li>
-            <li><a href="#">Photos</a></li>
-            <li><a href="#">Wedding Party</a></li>
-            <li><a href="#">Registry</a></li>
-            <li><a href="#">RSVP</a></li>
-        </ul>
-       </div>
-    </nav> -->
 
     <main>
         <img src="img/hamster.gif" alt="Couple Image">
