--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <h1 class="wedding-font">will you be my</h1>
         <h2>Valentine, pau?</h2>
-        <h3>SIGE NA O, BAHALA KA IKAW DIN</h3>
+        <h3>SIGE NA O, PLEASE PLEASE PLEASEEEEE</h3>
     </header>
     <!-- <nav>
        <div class="container">
